Step 9 - Write adapters
